# lectern

./: .gitignore  BENCHMARK.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bench.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clippy.yml  publish.yml
benchmarks/: .gitignore  benchmark.py  performance-report.md  pyproject.toml  report_template.md
benchmarks/complex-app/: composer.json
benchmarks/simple-laravel/: composer.json
benchmarks/simple-test/: composer.json
benchmarks/symfony-app/: composer.json
src/: autoload.rs  cache.rs  cli.rs  installer.rs  io.rs  lib.rs  main.rs  model.rs  utils.rs
src/commands/: info.rs  mod.rs
src/core/: autoload.rs  cache.rs  cache_utils.rs  installer.rs  io.rs  mod.rs  utils.rs
src/core/commands/: browse.rs  clear_cache.rs  depends.rs  diagnose.rs  funding.rs  info.rs  licenses.rs  mod.rs  outdated.rs  prohibits.rs  project.rs  (+5 more)
src/models/: mod.rs  model.rs
src/resolver/: dependency.rs  dependency_utils.rs  http_client.rs  mod.rs  packagist.rs  version.rs
tests/: autoload_tests.rs  browse_test.rs  cache_tests.rs  clear_cache_test.rs  dependency_tests.rs  depends_test.rs  diagnose_test.rs  fund_test.rs  http_client_tests.rs  init_test.rs  installer_tests.rs  integration_tests.rs  licenses_test.rs  mod.rs  model_tests.rs  outdated_test.rs  packagist_tests.rs  prohibits_test.rs  project_test.rs  script_test.rs  search_test.rs  show_test.rs  status_test.rs  strict_test_utils.rs  suggests_test.rs  utils_tests.rs  validate_test.rs  version_tests.rs
tests/common/: mod.rs
(+3 files in other folders)
