[package]
name = "lectern"
version = "0.1.0"
edition = "2024"
authors = ["Zander Lewis <zander@zanderlewis.dev>"]

[[bin]]
name = "lectern"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
reqwest = { version = "0.12.23", features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "stream"] }
semver = "1"
git2 = "0.20.2"
camino = "1"
fs_extra = "1.2"
tar = "0.4"
zip = "4.6.0"
flate2 = "1"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
walkdir = "2"
num_cpus = "1.16"
futures = "0.3"
lru = "0.16.0"
log = "0.4"
env_logger = "0.11.8"
lazy_static = "1.5.0"
dirs = "5.0"
colored = "2.0"

[dev-dependencies]
tempfile = "3"
proptest = "1.0"

